Add icons and update styles for features section
- Added SVG icons for social media and features.
- Updated styles for the first section background with a gradient overlay.
- Introduced a new class for feature icons with specific dimensions and styling.
- Integrated the new icons into the features section of the HTML.

--- a/index.html
+++ b/index.html
@@ -52,6 +52,11 @@
         <h2 class="visually-hidden">features</h2>
         <ul class="features">
           <li class="features-item">
+            <div class="icon-features">
+              <svg class="icon" width="64" height="64">
+                <use href="./images/symbol-defs.svg#icon-antenna-1"></use>
+              </svg>
+            </div>
             <h3 class="title-features">Strategy</h3>
             <p class="text-features">
               Our goal is to identify the business problem to walk away with the perfect and creative solution.
