--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <nav class="main-nav">
         <a class="link-logo" href="./index.html">Web<span class="text-studio-logo">Studio</span></a>
         <ul class="main-nav-list">
-          <li><a class="link" href="./index.html">Studio</a></li>
+          <li><a class="link studio" href="./index.html">Studio</a></li>
           <li><a class="link" href="">Portfolio</a></li>
           <li><a class="link" href="">Contacts</a></li>
         </ul>
@@ -54,7 +54,7 @@
           <li class="features-item">
             <div class="icon-features">
               <svg class="icon" width="64" height="64">
-                <use href="./images/symbol-defs.svg#icon-antenna-1"></use>
+                <use href="./images/icons.svg#icon-antenna-1"></use>
               </svg>
             </div>
             <h3 class="title-features">Strategy</h3>
@@ -63,18 +63,33 @@
             </p>
           </li>
           <li class="features-item">
+            <div class="icon-features">
+              <svg class="icon" width="64" height="64">
+                <use href="./images/icons.svg#icon-clock-1"></use>
+              </svg>
+            </div>
             <h3 class="title-features">Punctuality</h3>
             <p class="text-features">
               Bring the key message to the brand's audience for the best price within the shortest possible time.
             </p>
           </li>
           <li class="features-item">
+            <div class="icon-features">
+              <svg class="icon" width="64" height="64">
+                <use href="./images/icons.svg#icon-diagram-1"></use>
+              </svg>
+            </div>
             <h3 class="title-features">Diligence</h3>
             <p class="text-features">
               Research and confirm brands with the strongest digital growth opportunities and minimize risk.
             </p>
           </li>
           <li class="features-item">
+            <div class="icon-features">
+              <svg class="icon" width="64" height="64">
+                <use href="./images/icons.svg#icon-astronaut-1"></use>
+              </svg>
+            </div>
             <h3 class="title-features">Technologies</h3>
             <p class="text-features">
               Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.
@@ -92,12 +107,61 @@
               <h3 class="team-names">Mark Guerrero</h3>
               <p class="team-specialization">Product Designer</p>
             </div>
+            <div class="team-member-socials">
+              <a class="social-link" href="https://www.instagram.com/mark.guerrero" target="_blank"
+                rel="noopener noreferrer">
+                <svg class="icon-social" width="40" height="40" viewBox="0 0 32 32">
+                  <use href="./images/icons.svg#icon-insta"></use>
+                </svg>
+              </a>
+              <a class="social-link" href="https://x.com/tweeter/mark.guerrero" target="_blank"
+                rel="noopener noreferrer">
+                <svg class="icon-social" width="40" height="40">
+                  <use href="./images/icons.svg#icon-tweet"></use>
+                </svg>
+              </a>
+              <a class="social-link" href="https://www.facebook.com/mark.guerrero" target="_blank"
+                rel="noopener noreferrer">
+                <svg class="icon-social" width="40" height="40">
+                  <use href="./images/icons.svg#icon-fb"></use>
+                </svg>
+              </a>
+              <a class="social-link" href="https://linkedin.com/mark.guerrero" target="_blank"
+                rel="noopener noreferrer">
+                <svg class="icon-social" width="40" height="40">
+                  <use href="./images/icons.svg#icon-in"></use>
+                </svg>
+              </a>
+            </div>
           </li>
           <li class="team-member">
             <img src="./images/tom_ford.jpg" alt="Tom Ford" width="264" />
             <div class="team-member-text">
               <h3 class="team-names">Tom Ford</h3>
               <p class="team-specialization">Frontend Developer</p>
+            </div>
+            <div class="team-member-socials">
+              <a class="social-link" href="https://www.instagram.com/tom_ford" target="_blank"
+                rel="noopener noreferrer">
+                <svg class="icon-social" width="40" height="40">
+                  <use href="./images/icons.svg#icon-insta"></use>
+                </svg>
+              </a>
+              <a class="social-link" href="https://x.com/tweeter/tom_ford" target="_blank" rel="noopener noreferrer">
+                <svg class="icon-social" width="40" height="40">
+                  <use href="./images/icons.svg#icon-tweet"></use>
+                </svg>
+              </a>
+              <a class="social-link" href="https://www.facebook.com/tom_ford" target="_blank" rel="noopener noreferrer">
+                <svg class="icon-social" width="40" height="40">
+                  <use href="./images/icons.svg#icon-fb"></use>
+                </svg>
+              </a>
+              <a class="social-link" href="https://linkedin.com/tom_ford" target="_blank" rel="noopener noreferrer">
+                <svg class="icon-social" width="40" height="40">
+                  <use href="./images/icons.svg#icon-in"></use>
+                </svg>
+              </a>
             </div>
           </li>
           <li class="team-member">
@@ -106,12 +170,64 @@
               <h3 class="team-names">Camila Garcia</h3>
               <p class="team-specialization">Marketing</p>
             </div>
+            <div class="team-member-socials">
+              <a class="social-link" href="https://www.instagram.com/camila_garcia" target="_blank"
+                rel="noopener noreferrer">
+                <svg class="icon-social" width="40" height="40">
+                  <use href="./images/icons.svg#icon-insta"></use>
+                </svg>
+              </a>
+              <a class="social-link" href="https://x.com/tweeter/camila_garcia" target="_blank"
+                rel="noopener noreferrer">
+                <svg class="icon-social" width="40" height="40">
+                  <use href="./images/icons.svg#icon-tweet"></use>
+                </svg>
+              </a>
+              <a class="social-link" href="https://www.facebook.com/camila_garcia" target="_blank"
+                rel="noopener noreferrer">
+                <svg class="icon-social" width="40" height="40">
+                  <use href="./images/icons.svg#icon-fb"></use>
+                </svg>
+              </a>
+              <a class="social-link" href="https://linkedin.com/camila_garcia" target="_blank"
+                rel="noopener noreferrer">
+                <svg class="icon-social" width="40" height="40">
+                  <use href="./images/icons.svg#icon-in"></use>
+                </svg>
+              </a>
+            </div>
           </li>
           <li class="team-member">
             <img src="./images/daniel_wilson.jpg" alt="Daniel Wilson" width="264" />
             <div class="team-member-text">
               <h3 class="team-names">Daniel Wilson</h3>
               <p class="team-specialization">UI Designer</p>
+            </div>
+            <div class="team-member-socials">
+              <a class="social-link" href="https://www.instagram.com/daniel_wilson" target="_blank"
+                rel="noopener noreferrer">
+                <svg class="icon-social" width="40" height="40">
+                  <use href="./images/icons.svg#icon-insta"></use>
+                </svg>
+              </a>
+              <a class="social-link" href="https://x.com/tweeter/daniel_wilson" target="_blank"
+                rel="noopener noreferrer">
+                <svg class="icon-social" width="40" height="40">
+                  <use href="./images/icons.svg#icon-tweet"></use>
+                </svg>
+              </a>
+              <a class="social-link" href="https://www.facebook.com/daniel_wilson" target="_blank"
+                rel="noopener noreferrer">
+                <svg class="icon-social" width="40" height="40">
+                  <use href="./images/icons.svg#icon-fb"></use>
+                </svg>
+              </a>
+              <a class="social-link" href="https://linkedin.com/daniel_wilson" target="_blank"
+                rel="noopener noreferrer">
+                <svg class="icon-social" width="40" height="40">
+                  <use href="./images/icons.svg#icon-in"></use>
+                </svg>
+              </a>
             </div>
         </ul>
       </div>
@@ -127,8 +243,17 @@
               <p class="projects-type">App</p>
             </div>
           </li>
-          <li class="projects-item">
-            <img src="./images/cashless_payment.jpg" alt="Cashless Payment" width="360" />
+          <li class="projects-item projects-item-overlay">
+            <div class="parrent-overlay"><img src="./images/cashless_payment.jpg" alt="Cashless Payment" width="360" />
+              <div class="overlay">
+                <p>14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker
+                  App
+                  · Exotic Fruit
+                  Ecommerce App ·
+                  Cloud Storage App</p>
+              </div>
+            </div>
+
             <div class="projects-text">
               <h3 class="projects-name">Cashless Payment</h3>
               <p class="projects-type">Marketing</p>
@@ -168,10 +293,37 @@
 
   <footer class="footer">
     <div class="container footer-container">
-      <a class="footer-link" href="./index.html">Web<span class="text-studio-logo">Studio</span></a>
-      <p class="footer-text">
-        Increase the flow of customers and sales for your business with digital marketing & growth solutions.
-      </p>
+      <div class="footer-logo">
+        <a class="footer-link" href="./index.html">Web<span class="text-studio-logo">Studio</span></a>
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with digital marketing & growth solutions.
+        </p>
+      </div>
+      <div class="footer-socials">
+        <p class="social-media-title">Social media</p>
+        <div class="social-media-links">
+          <a class="social-link" href="https://www.instagram.com/webstudio" target="_blank" rel="noopener noreferrer">
+            <svg class="icon-social" width="40" height="40">
+              <use href="./images/icons.svg#icon-insta-foot"></use>
+            </svg>
+          </a>
+          <a class="social-link" href="https://x.com/webstudio" target="_blank" rel="noopener noreferrer">
+            <svg class="icon-social" width="40" height="40">
+              <use href="./images/icons.svg#icon-tweet-foot"></use>
+            </svg>
+          </a>
+          <a class="social-link" href="https://www.facebook.com/webstudio" target="_blank" rel="noopener noreferrer">
+            <svg class="icon-social" width="40" height="40">
+              <use href="./images/icons.svg#icon-fb-foot"></use>
+            </svg>
+          </a>
+          <a class="social-link" href="https://linkedin.com/webstudio" target="_blank" rel="noopener noreferrer">
+            <svg class="icon-social" width="40" height="40">
+              <use href="./images/icons.svg#icon-in-foot"></use>
+            </svg>
+          </a>
+        </div>
+      </div>
     </div>
   </footer>
 </body>
