Refactor team member social links: convert to list format for improved structure and accessibility

--- a/index.html
+++ b/index.html
@@ -106,32 +106,41 @@
             <div class="team-member-text">
               <h3 class="team-names">Mark Guerrero</h3>
               <p class="team-specialization">Product Designer</p>
-            </div>
-            <div class="team-member-socials">
-              <a class="social-link" href="https://www.instagram.com/mark.guerrero" target="_blank"
-                rel="noopener noreferrer">
-                <svg class="icon-social" width="40" height="40" viewBox="0 0 32 32">
-                  <use href="./images/icons.svg#icon-insta"></use>
-                </svg>
-              </a>
-              <a class="social-link" href="https://x.com/tweeter/mark.guerrero" target="_blank"
-                rel="noopener noreferrer">
-                <svg class="icon-social" width="40" height="40">
-                  <use href="./images/icons.svg#icon-tweet"></use>
-                </svg>
-              </a>
-              <a class="social-link" href="https://www.facebook.com/mark.guerrero" target="_blank"
-                rel="noopener noreferrer">
-                <svg class="icon-social" width="40" height="40">
-                  <use href="./images/icons.svg#icon-fb"></use>
-                </svg>
-              </a>
-              <a class="social-link" href="https://linkedin.com/mark.guerrero" target="_blank"
-                rel="noopener noreferrer">
-                <svg class="icon-social" width="40" height="40">
-                  <use href="./images/icons.svg#icon-in"></use>
-                </svg>
-              </a>
+
+              <ul class="team-member-socials">
+                <li class="social-link-item">
+                  <a class="social-link" href="https://www.instagram.com/mark.guerrero" target="_blank"
+                    rel="noopener noreferrer">
+                    <svg class="icon-social" width="40" height="40" viewBox="0 0 32 32">
+                      <use href="./images/icons.svg#icon-insta"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-link-item">
+                  <a class="social-link" href="https://x.com/tweeter/mark.guerrero" target="_blank"
+                    rel="noopener noreferrer">
+                    <svg class="icon-social" width="40" height="40">
+                      <use href="./images/icons.svg#icon-tweet"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-link-item">
+                  <a class="social-link" href="https://www.facebook.com/mark.guerrero" target="_blank"
+                    rel="noopener noreferrer">
+                    <svg class="icon-social" width="40" height="40">
+                      <use href="./images/icons.svg#icon-fb"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-link-item">
+                  <a class="social-link" href="https://linkedin.com/mark.guerrero" target="_blank"
+                    rel="noopener noreferrer">
+                    <svg class="icon-social" width="40" height="40">
+                      <use href="./images/icons.svg#icon-in"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </div>
           </li>
           <li class="team-member">
@@ -139,29 +148,40 @@
             <div class="team-member-text">
               <h3 class="team-names">Tom Ford</h3>
               <p class="team-specialization">Frontend Developer</p>
-            </div>
-            <div class="team-member-socials">
-              <a class="social-link" href="https://www.instagram.com/tom_ford" target="_blank"
-                rel="noopener noreferrer">
-                <svg class="icon-social" width="40" height="40">
-                  <use href="./images/icons.svg#icon-insta"></use>
-                </svg>
-              </a>
-              <a class="social-link" href="https://x.com/tweeter/tom_ford" target="_blank" rel="noopener noreferrer">
-                <svg class="icon-social" width="40" height="40">
-                  <use href="./images/icons.svg#icon-tweet"></use>
-                </svg>
-              </a>
-              <a class="social-link" href="https://www.facebook.com/tom_ford" target="_blank" rel="noopener noreferrer">
-                <svg class="icon-social" width="40" height="40">
-                  <use href="./images/icons.svg#icon-fb"></use>
-                </svg>
-              </a>
-              <a class="social-link" href="https://linkedin.com/tom_ford" target="_blank" rel="noopener noreferrer">
-                <svg class="icon-social" width="40" height="40">
-                  <use href="./images/icons.svg#icon-in"></use>
-                </svg>
-              </a>
+
+              <ul class="team-member-socials">
+                <li class="social-link-item">
+                  <a class="social-link" href="https://www.instagram.com/tom_ford" target="_blank"
+                    rel="noopener noreferrer">
+                    <svg class="icon-social" width="40" height="40">
+                      <use href="./images/icons.svg#icon-insta"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-link-item">
+                  <a class="social-link" href="https://x.com/tweeter/tom_ford" target="_blank"
+                    rel="noopener noreferrer">
+                    <svg class="icon-social" width="40" height="40">
+                      <use href="./images/icons.svg#icon-tweet"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-link-item">
+                  <a class="social-link" href="https://www.facebook.com/tom_ford" target="_blank"
+                    rel="noopener noreferrer">
+                    <svg class="icon-social" width="40" height="40">
+                      <use href="./images/icons.svg#icon-fb"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-link-item">
+                  <a class="social-link" href="https://linkedin.com/tom_ford" target="_blank" rel="noopener noreferrer">
+                    <svg class="icon-social" width="40" height="40">
+                      <use href="./images/icons.svg#icon-in"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </div>
           </li>
           <li class="team-member">
@@ -169,32 +189,41 @@
             <div class="team-member-text">
               <h3 class="team-names">Camila Garcia</h3>
               <p class="team-specialization">Marketing</p>
-            </div>
-            <div class="team-member-socials">
-              <a class="social-link" href="https://www.instagram.com/camila_garcia" target="_blank"
-                rel="noopener noreferrer">
-                <svg class="icon-social" width="40" height="40">
-                  <use href="./images/icons.svg#icon-insta"></use>
-                </svg>
-              </a>
-              <a class="social-link" href="https://x.com/tweeter/camila_garcia" target="_blank"
-                rel="noopener noreferrer">
-                <svg class="icon-social" width="40" height="40">
-                  <use href="./images/icons.svg#icon-tweet"></use>
-                </svg>
-              </a>
-              <a class="social-link" href="https://www.facebook.com/camila_garcia" target="_blank"
-                rel="noopener noreferrer">
-                <svg class="icon-social" width="40" height="40">
-                  <use href="./images/icons.svg#icon-fb"></use>
-                </svg>
-              </a>
-              <a class="social-link" href="https://linkedin.com/camila_garcia" target="_blank"
-                rel="noopener noreferrer">
-                <svg class="icon-social" width="40" height="40">
-                  <use href="./images/icons.svg#icon-in"></use>
-                </svg>
-              </a>
+
+              <ul class="team-member-socials">
+                <li class="social-link-item">
+                  <a class="social-link" href="https://www.instagram.com/camila_garcia" target="_blank"
+                    rel="noopener noreferrer">
+                    <svg class="icon-social" width="40" height="40">
+                      <use href="./images/icons.svg#icon-insta"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-link-item">
+                  <a class="social-link" href="https://x.com/tweeter/camila_garcia" target="_blank"
+                    rel="noopener noreferrer">
+                    <svg class="icon-social" width="40" height="40">
+                      <use href="./images/icons.svg#icon-tweet"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-link-item">
+                  <a class="social-link" href="https://www.facebook.com/camila_garcia" target="_blank"
+                    rel="noopener noreferrer">
+                    <svg class="icon-social" width="40" height="40">
+                      <use href="./images/icons.svg#icon-fb"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-link-item">
+                  <a class="social-link" href="https://linkedin.com/camila_garcia" target="_blank"
+                    rel="noopener noreferrer">
+                    <svg class="icon-social" width="40" height="40">
+                      <use href="./images/icons.svg#icon-in"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </div>
           </li>
           <li class="team-member">
@@ -202,33 +231,42 @@
             <div class="team-member-text">
               <h3 class="team-names">Daniel Wilson</h3>
               <p class="team-specialization">UI Designer</p>
+
+              <ul class="team-member-socials">
+                <li class="social-link-item">
+                  <a class="social-link" href="https://www.instagram.com/daniel_wilson" target="_blank"
+                    rel="noopener noreferrer">
+                    <svg class="icon-social" width="40" height="40">
+                      <use href="./images/icons.svg#icon-insta"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-link-item">
+                  <a class="social-link" href="https://x.com/tweeter/daniel_wilson" target="_blank"
+                    rel="noopener noreferrer">
+                    <svg class="icon-social" width="40" height="40">
+                      <use href="./images/icons.svg#icon-tweet"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-link-item">
+                  <a class="social-link" href="https://www.facebook.com/daniel_wilson" target="_blank"
+                    rel="noopener noreferrer">
+                    <svg class="icon-social" width="40" height="40">
+                      <use href="./images/icons.svg#icon-fb"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-link-item">
+                  <a class="social-link" href="https://linkedin.com/daniel_wilson" target="_blank"
+                    rel="noopener noreferrer">
+                    <svg class="icon-social" width="40" height="40">
+                      <use href="./images/icons.svg#icon-in"></use>
+                    </svg>
+                  </a>
+                </li>
             </div>
-            <div class="team-member-socials">
-              <a class="social-link" href="https://www.instagram.com/daniel_wilson" target="_blank"
-                rel="noopener noreferrer">
-                <svg class="icon-social" width="40" height="40">
-                  <use href="./images/icons.svg#icon-insta"></use>
-                </svg>
-              </a>
-              <a class="social-link" href="https://x.com/tweeter/daniel_wilson" target="_blank"
-                rel="noopener noreferrer">
-                <svg class="icon-social" width="40" height="40">
-                  <use href="./images/icons.svg#icon-tweet"></use>
-                </svg>
-              </a>
-              <a class="social-link" href="https://www.facebook.com/daniel_wilson" target="_blank"
-                rel="noopener noreferrer">
-                <svg class="icon-social" width="40" height="40">
-                  <use href="./images/icons.svg#icon-fb"></use>
-                </svg>
-              </a>
-              <a class="social-link" href="https://linkedin.com/daniel_wilson" target="_blank"
-                rel="noopener noreferrer">
-                <svg class="icon-social" width="40" height="40">
-                  <use href="./images/icons.svg#icon-in"></use>
-                </svg>
-              </a>
-            </div>
+        </ul>
         </ul>
       </div>
     </section>
