Update social media icons and links in index.html
- Changed Instagram icon to a new design and updated the SVG reference.
- Updated Twitter icon to a new design and changed the SVG reference.
- Updated Facebook icon to a new design and changed the SVG reference.
- Updated LinkedIn icon to a new design and changed the SVG reference.
- Adjusted icon sizes for better consistency across social media links.

--- a/index.html
+++ b/index.html
@@ -111,32 +111,32 @@
                 <li class="social-link-item">
                   <a class="social-link" href="https://www.instagram.com/mark.guerrero" target="_blank"
                     rel="noopener noreferrer">
-                    <svg class="icon-social" width="40" height="40" viewBox="0 0 32 32">
-                      <use href="./images/icons.svg#icon-insta"></use>
+                    <svg class="icon-social" width="16" height="16" viewBox="0 0 32 32">
+                      <use href="./images/icons.svg#icon-instagram-1"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="social-link-item">
                   <a class="social-link" href="https://x.com/tweeter/mark.guerrero" target="_blank"
                     rel="noopener noreferrer">
-                    <svg class="icon-social" width="40" height="40">
-                      <use href="./images/icons.svg#icon-tweet"></use>
+                    <svg class="icon-social" width="16" height="16">
+                      <use href="./images/icons.svg#icon-twitter-1"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="social-link-item">
                   <a class="social-link" href="https://www.facebook.com/mark.guerrero" target="_blank"
                     rel="noopener noreferrer">
-                    <svg class="icon-social" width="40" height="40">
-                      <use href="./images/icons.svg#icon-fb"></use>
+                    <svg class="icon-social" width="16" height="16">
+                      <use href="./images/icons.svg#icon-facebook-1"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="social-link-item">
                   <a class="social-link" href="https://linkedin.com/mark.guerrero" target="_blank"
                     rel="noopener noreferrer">
-                    <svg class="icon-social" width="40" height="40">
-                      <use href="./images/icons.svg#icon-in"></use>
+                    <svg class="icon-social" width="16" height="16">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
                     </svg>
                   </a>
                 </li>
@@ -153,31 +153,31 @@
                 <li class="social-link-item">
                   <a class="social-link" href="https://www.instagram.com/tom_ford" target="_blank"
                     rel="noopener noreferrer">
-                    <svg class="icon-social" width="40" height="40">
-                      <use href="./images/icons.svg#icon-insta"></use>
+                    <svg class="icon-social" width="16" height="16">
+                      <use href="./images/icons.svg#icon-instagram-1"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="social-link-item">
                   <a class="social-link" href="https://x.com/tweeter/tom_ford" target="_blank"
                     rel="noopener noreferrer">
-                    <svg class="icon-social" width="40" height="40">
-                      <use href="./images/icons.svg#icon-tweet"></use>
+                    <svg class="icon-social" width="16" height="16">
+                      <use href="./images/icons.svg#icon-twitter-1"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="social-link-item">
                   <a class="social-link" href="https://www.facebook.com/tom_ford" target="_blank"
                     rel="noopener noreferrer">
-                    <svg class="icon-social" width="40" height="40">
-                      <use href="./images/icons.svg#icon-fb"></use>
+                    <svg class="icon-social" width="16" height="16">
+                      <use href="./images/icons.svg#icon-facebook-1"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="social-link-item">
                   <a class="social-link" href="https://linkedin.com/tom_ford" target="_blank" rel="noopener noreferrer">
-                    <svg class="icon-social" width="40" height="40">
-                      <use href="./images/icons.svg#icon-in"></use>
+                    <svg class="icon-social" width="16" height="16">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
                     </svg>
                   </a>
                 </li>
@@ -194,32 +194,32 @@
                 <li class="social-link-item">
                   <a class="social-link" href="https://www.instagram.com/camila_garcia" target="_blank"
                     rel="noopener noreferrer">
-                    <svg class="icon-social" width="40" height="40">
-                      <use href="./images/icons.svg#icon-insta"></use>
+                    <svg class="icon-social" width="16" height="16">
+                      <use href="./images/icons.svg#icon-instagram-1"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="social-link-item">
                   <a class="social-link" href="https://x.com/tweeter/camila_garcia" target="_blank"
                     rel="noopener noreferrer">
-                    <svg class="icon-social" width="40" height="40">
-                      <use href="./images/icons.svg#icon-tweet"></use>
+                    <svg class="icon-social" width="16" height="16">
+                      <use href="./images/icons.svg#icon-twitter-1"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="social-link-item">
                   <a class="social-link" href="https://www.facebook.com/camila_garcia" target="_blank"
                     rel="noopener noreferrer">
-                    <svg class="icon-social" width="40" height="40">
-                      <use href="./images/icons.svg#icon-fb"></use>
+                    <svg class="icon-social" width="16" height="16">
+                      <use href="./images/icons.svg#icon-facebook-1"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="social-link-item">
                   <a class="social-link" href="https://linkedin.com/camila_garcia" target="_blank"
                     rel="noopener noreferrer">
-                    <svg class="icon-social" width="40" height="40">
-                      <use href="./images/icons.svg#icon-in"></use>
+                    <svg class="icon-social" width="16" height="16">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
                     </svg>
                   </a>
                 </li>
@@ -236,32 +236,32 @@
                 <li class="social-link-item">
                   <a class="social-link" href="https://www.instagram.com/daniel_wilson" target="_blank"
                     rel="noopener noreferrer">
-                    <svg class="icon-social" width="40" height="40">
-                      <use href="./images/icons.svg#icon-insta"></use>
+                    <svg class="icon-social" width="16" height="16">
+                      <use href="./images/icons.svg#icon-instagram-1"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="social-link-item">
                   <a class="social-link" href="https://x.com/tweeter/daniel_wilson" target="_blank"
                     rel="noopener noreferrer">
-                    <svg class="icon-social" width="40" height="40">
-                      <use href="./images/icons.svg#icon-tweet"></use>
+                    <svg class="icon-social" width="16" height="16">
+                      <use href="./images/icons.svg#icon-twitter-1"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="social-link-item">
                   <a class="social-link" href="https://www.facebook.com/daniel_wilson" target="_blank"
                     rel="noopener noreferrer">
-                    <svg class="icon-social" width="40" height="40">
-                      <use href="./images/icons.svg#icon-fb"></use>
+                    <svg class="icon-social" width="16" height="16">
+                      <use href="./images/icons.svg#icon-facebook-1"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="social-link-item">
                   <a class="social-link" href="https://linkedin.com/daniel_wilson" target="_blank"
                     rel="noopener noreferrer">
-                    <svg class="icon-social" width="40" height="40">
-                      <use href="./images/icons.svg#icon-in"></use>
+                    <svg class="icon-social" width="16" height="16">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
                     </svg>
                   </a>
                 </li>
@@ -342,23 +342,23 @@
         <p class="social-media-title">Social media</p>
         <div class="social-media-links">
           <a class="social-link" href="https://www.instagram.com/webstudio" target="_blank" rel="noopener noreferrer">
-            <svg class="icon-social" width="40" height="40">
-              <use href="./images/icons.svg#icon-insta-foot"></use>
+            <svg class="icon-social" width="24" height="24">
+              <use href="./images/icons.svg#icon-instagram-1"></use>
             </svg>
           </a>
           <a class="social-link" href="https://x.com/webstudio" target="_blank" rel="noopener noreferrer">
-            <svg class="icon-social" width="40" height="40">
-              <use href="./images/icons.svg#icon-tweet-foot"></use>
+            <svg class="icon-social" width="24" height="24">
+              <use href="./images/icons.svg#icon-twitter-1"></use>
             </svg>
           </a>
           <a class="social-link" href="https://www.facebook.com/webstudio" target="_blank" rel="noopener noreferrer">
-            <svg class="icon-social" width="40" height="40">
-              <use href="./images/icons.svg#icon-fb-foot"></use>
+            <svg class="icon-social" width="24" height="24">
+              <use href="./images/icons.svg#icon-facebook-1"></use>
             </svg>
           </a>
           <a class="social-link" href="https://linkedin.com/webstudio" target="_blank" rel="noopener noreferrer">
-            <svg class="icon-social" width="40" height="40">
-              <use href="./images/icons.svg#icon-in-foot"></use>
+            <svg class="icon-social" width="24" height="24">
+              <use href="./images/icons.svg#icon-linkedin"></use>
             </svg>
           </a>
         </div>
