Enhance project item hover effects: add transition and box-shadow for improved interactivity

--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
               <p class="projects-type">App</p>
             </div>
           </li>
-          <li class="projects-item projects-item-overlay">
+          <li class="projects-item">
             <div class="parrent-overlay"><img src="./images/cashless_payment.jpg" alt="Cashless Payment" width="360" />
               <div class="overlay">
                 <p>14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker
