--- a/index.html
+++ b/index.html
@@ -276,7 +276,15 @@
         <h2 class="title-portfolio">Our Portfolio</h2>
         <ul class="our-portfolio-list">
           <li class="projects-item">
-            <img src="./images/banking_app.jpg" alt="Banking App" width="360" />
+            <div class="parrent-overlay"><img src="./images/banking_app.jpg" alt="Banking App" width="360" />
+              <div class="overlay">
+                <p>14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker
+                  App
+                  · Exotic Fruit
+                  Ecommerce App ·
+                  Cloud Storage App</p>
+              </div>
+            </div>
             <div class="projects-text">
               <h3 class="projects-name">Banking App</h3>
               <p class="projects-type">App</p>
@@ -292,35 +300,67 @@
                   Cloud Storage App</p>
               </div>
             </div>
-
             <div class="projects-text">
               <h3 class="projects-name">Cashless Payment</h3>
               <p class="projects-type">Marketing</p>
             </div>
           </li>
           <li class="projects-item">
-            <img src="./images/meditation_app.jpg" alt="Meditation App" width="360" />
+            <div class="parrent-overlay"><img src="./images/meditation_app.jpg" alt="Meditation App" width="360" />
+              <div class="overlay">
+                <p>14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker
+                  App
+                  · Exotic Fruit
+                  Ecommerce App ·
+                  Cloud Storage App</p>
+              </div>
+            </div>
             <div class="projects-text">
               <h3 class="projects-name">Meditation App</h3>
               <p class="projects-type">App</p>
             </div>
           </li>
           <li class="projects-item">
-            <img src="./images/taxi_service.jpg" alt="Taxi Service" width="360" />
+            <div class="parrent-overlay"><img src="./images/taxi_service.jpg" alt="Taxi Service" width="360" />
+              <div class="overlay">
+                <p>14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker
+                  App
+                  · Exotic Fruit
+                  Ecommerce App ·
+                  Cloud Storage App</p>
+              </div>
+            </div>
             <div class="projects-text">
               <h3 class="projects-name">Taxi Service</h3>
               <p class="projects-type">Marketing</p>
             </div>
           </li>
           <li class="projects-item">
-            <img src="./images/screen_illustrations.jpg" alt="Screen Illustrations" width="360" />
+            <div class="parrent-overlay"><img src="./images/screen_illustrations.jpg" alt="Screen Illustrations"
+                width="360" />
+              <div class="overlay">
+                <p>14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker
+                  App
+                  · Exotic Fruit
+                  Ecommerce App ·
+                  Cloud Storage App</p>
+              </div>
+            </div>
             <div class="projects-text">
               <h3 class="projects-name">Screen Illustrations</h3>
               <p class="projects-type">Design</p>
             </div>
           </li>
           <li class="projects-item">
-            <img src="./images/online_courses.jpg" alt="Online Courses" width="360" />
+            <div class="parrent-overlay"><img src="./images/online_courses.jpg" alt="Online Courses" width="360" />
+              <div class="overlay">
+                <p>14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker
+                  App
+                  · Exotic Fruit
+                  Ecommerce App ·
+                  Cloud Storage App</p>
+              </div>
+            </div>
             <div class="projects-text">
               <h3 class="projects-name">Online Courses</h3>
               <p class="projects-type">Marketing</p>
@@ -340,28 +380,36 @@
       </div>
       <div class="footer-socials">
         <p class="social-media-title">Social media</p>
-        <div class="social-media-links">
-          <a class="social-link" href="https://www.instagram.com/webstudio" target="_blank" rel="noopener noreferrer">
-            <svg class="icon-social" width="24" height="24">
-              <use href="./images/icons.svg#icon-instagram-1"></use>
-            </svg>
-          </a>
-          <a class="social-link" href="https://x.com/webstudio" target="_blank" rel="noopener noreferrer">
-            <svg class="icon-social" width="24" height="24">
-              <use href="./images/icons.svg#icon-twitter-1"></use>
-            </svg>
-          </a>
-          <a class="social-link" href="https://www.facebook.com/webstudio" target="_blank" rel="noopener noreferrer">
-            <svg class="icon-social" width="24" height="24">
-              <use href="./images/icons.svg#icon-facebook-1"></use>
-            </svg>
-          </a>
-          <a class="social-link" href="https://linkedin.com/webstudio" target="_blank" rel="noopener noreferrer">
-            <svg class="icon-social" width="24" height="24">
-              <use href="./images/icons.svg#icon-linkedin"></use>
-            </svg>
-          </a>
-        </div>
+        <ul class="social-media-links">
+          <li class="social-link-item">
+            <a class="social-link" href="https://www.instagram.com/webstudio" target="_blank" rel="noopener noreferrer">
+              <svg class="icon-social" width="24" height="24">
+                <use href="./images/icons.svg#icon-instagram-1"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-link-item">
+            <a class="social-link" href="https://x.com/webstudio" target="_blank" rel="noopener noreferrer">
+              <svg class="icon-social" width="24" height="24">
+                <use href="./images/icons.svg#icon-twitter-1"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-link-item">
+            <a class="social-link" href="https://www.facebook.com/webstudio" target="_blank" rel="noopener noreferrer">
+              <svg class="icon-social" width="24" height="24">
+                <use href="./images/icons.svg#icon-facebook-1"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-link-item">
+            <a class="social-link" href="https://linkedin.com/webstudio" target="_blank" rel="noopener noreferrer">
+              <svg class="icon-social" width="24" height="24">
+                <use href="./images/icons.svg#icon-linkedin"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
       </div>
     </div>
   </footer>
