--- a/index.html
+++ b/index.html
@@ -277,13 +277,11 @@
         <ul class="our-portfolio-list">
           <li class="projects-item">
             <div class="parrent-overlay"><img src="./images/banking_app.jpg" alt="Banking App" width="360" />
-              <div class="overlay">
-                <p>14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker
-                  App
-                  · Exotic Fruit
-                  Ecommerce App ·
-                  Cloud Storage App</p>
-              </div>
+              <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker
+                App
+                · Exotic Fruit
+                Ecommerce App ·
+                Cloud Storage App</p>
             </div>
             <div class="projects-text">
               <h3 class="projects-name">Banking App</h3>
@@ -292,13 +290,11 @@
           </li>
           <li class="projects-item">
             <div class="parrent-overlay"><img src="./images/cashless_payment.jpg" alt="Cashless Payment" width="360" />
-              <div class="overlay">
-                <p>14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker
-                  App
-                  · Exotic Fruit
-                  Ecommerce App ·
-                  Cloud Storage App</p>
-              </div>
+              <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker
+                App
+                · Exotic Fruit
+                Ecommerce App ·
+                Cloud Storage App</p>
             </div>
             <div class="projects-text">
               <h3 class="projects-name">Cashless Payment</h3>
@@ -307,13 +303,11 @@
           </li>
           <li class="projects-item">
             <div class="parrent-overlay"><img src="./images/meditation_app.jpg" alt="Meditation App" width="360" />
-              <div class="overlay">
-                <p>14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker
-                  App
-                  · Exotic Fruit
-                  Ecommerce App ·
-                  Cloud Storage App</p>
-              </div>
+              <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker
+                App
+                · Exotic Fruit
+                Ecommerce App ·
+                Cloud Storage App</p>
             </div>
             <div class="projects-text">
               <h3 class="projects-name">Meditation App</h3>
@@ -322,13 +316,11 @@
           </li>
           <li class="projects-item">
             <div class="parrent-overlay"><img src="./images/taxi_service.jpg" alt="Taxi Service" width="360" />
-              <div class="overlay">
-                <p>14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker
-                  App
-                  · Exotic Fruit
-                  Ecommerce App ·
-                  Cloud Storage App</p>
-              </div>
+              <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker
+                App
+                · Exotic Fruit
+                Ecommerce App ·
+                Cloud Storage App</p>
             </div>
             <div class="projects-text">
               <h3 class="projects-name">Taxi Service</h3>
@@ -338,13 +330,11 @@
           <li class="projects-item">
             <div class="parrent-overlay"><img src="./images/screen_illustrations.jpg" alt="Screen Illustrations"
                 width="360" />
-              <div class="overlay">
-                <p>14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker
-                  App
-                  · Exotic Fruit
-                  Ecommerce App ·
-                  Cloud Storage App</p>
-              </div>
+              <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker
+                App
+                · Exotic Fruit
+                Ecommerce App ·
+                Cloud Storage App</p>
             </div>
             <div class="projects-text">
               <h3 class="projects-name">Screen Illustrations</h3>
@@ -353,13 +343,11 @@
           </li>
           <li class="projects-item">
             <div class="parrent-overlay"><img src="./images/online_courses.jpg" alt="Online Courses" width="360" />
-              <div class="overlay">
-                <p>14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker
-                  App
-                  · Exotic Fruit
-                  Ecommerce App ·
-                  Cloud Storage App</p>
-              </div>
+              <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker
+                App
+                · Exotic Fruit
+                Ecommerce App ·
+                Cloud Storage App</p>
             </div>
             <div class="projects-text">
               <h3 class="projects-name">Online Courses</h3>
