--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css">
   <link rel="stylesheet" href="./css/styles.css" />
+  <link rel="shortcut icon" href="./favicon.png" type="image/x-icon">
   <title>GoIT Markup hw 03-Web-Studio-(Version-5.0)</title>
 </head>
 
